--- a/Lesson_2/index.html
+++ b/Lesson_2/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./app.ts" defer />
+    <script src="./app.js" defer />
   </body>
 </html>
