practice in tsc

--- a/Practice_3/index.html
+++ b/Practice_3/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <button type="button">add</button>
+    <script src="./dist/app.js" defer></script>
+    <script src="./dist/buttonAction.js" defer></script>
+  </body>
 </html>
