--- a/Practice_3/index.html
+++ b/Practice_3/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button type="button">add</button>
+    <button type="button" id="button">add</button>
     <script src="./dist/app.js" defer></script>
     <script src="./dist/buttonAction.js" defer></script>
   </body>
